# -django_dashboard

./: MANIFEST.in  README.rst  setup.cfg
core/: admin.py  models.py  views.py
core/migrations/: 0001_initial.py
core/templates/: base.html  index.html  login.html
django_dashboard.egg-info/: PKG-INFO  SOURCES.txt
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
